[package]
name = "venv-wrapper"
version = "1.0.0"
authors = ["Nicolas Marier <software@nmarier.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple python virtual environment management"
homepage = "https://github.com/marier-nico/venv-wrapper"
repository = "https://github.com/marier-nico/venv-wrapper"
readme = "README.md"
keywords = ["cli", "python", "venv", "virtualenv"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = "~2.33"
directories = "~3.0.2"
eyre = "~0.6.5"
is_executable = "~1.0.1"
os_str_bytes = "~3.1"
which = "~4.1.0"
