[package]
name = "venv-wrapper"
version = "2.0.0"
authors = ["Nicolas Marier <software@nmarier.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple python virtual environment management"
homepage = "https://github.com/marier-nico/venv-wrapper"
repository = "https://github.com/marier-nico/venv-wrapper"
readme = "README.md"
keywords = ["cli", "python", "venv", "virtualenv"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ansi_term = "~0.12.1"
clap = "~2.33"
directories = "~3.0.2"
env_logger = "~0.8.4"
eyre = "~0.6.5"
indenter = "~0.3.3"
regex = "~1"
rust-ini = "~0.17"
is_executable = "~1.0.1"
log = "~0.4.14"
which = "~4.1.0"
